Cập nhật chức năng mới